--- a/backend/foodgram_api/Dockerfile
+++ b/backend/foodgram_api/Dockerfile
@@ -5,8 +5,5 @@ COPY . /app
 
 WORKDIR /app
 
-RUN python3 -m pip install --upgrade pip && \
-    pip3 install -r /app/requirements.txt --no-cache-dir && \
-    python3 /app/manage.py collectstatic --noinput
-CMD python3 /app/manage.py migrate --noinput && \
-    gunicorn foodgram_api.wsgi:application --bind 0.0.0.0:8000
+RUN python3 -m pip install --upgrade pip
+CMD ls
