--- a/backend/foodgram_api/Dockerfile
+++ b/backend/foodgram_api/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3.7-slim
-RUN mkdir /app
 
-COPY . /app
+WORKDIR /code
 
-WORKDIR /app
+COPY . /code
 
-RUN ls
-CMD ls
+RUN python3 -m pip install --upgrade pip && \
+    pip3 install -r /code/requirements.txt --no-cache-dir && \
+    python3 /code/manage.py collectstatic --noinput
+CMD python3 /code/manage.py migrate --noinput && \
+    gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
