--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,13 +11,13 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - database:/var/lib/postgresql/data/
+      - database:/var/lib/postgresql/foodgram/data/
     
     env_file:
       - ./.env
       
   web:
-    image: lokilal/foodgram_api:latest
+    image: lokilal/foodgram:latest
     restart: always
     depends_on:
       - db
@@ -28,7 +28,7 @@ services:
       - media_value:/app/media/ 
 
   frontend:
-    image: lokilal/frontend:latest
+    image: lokilal/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
       
@@ -37,7 +37,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/static/
