--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,20 +1,14 @@
 version: '3.3'
 
-
-volumes:
-  static_value:
-  media_value: 
-  database: 
-
 services:
 
   db:
     image: postgres:13.0-alpine
     volumes:
-      - database:/var/lib/postgresql/foodgram/data/
+      - database:/var/lib/postgresql/data/
     
     env_file:
-      - ./.env
+      - .env
       
   web:
     image: lokilal/foodgram:latest
@@ -44,3 +38,8 @@ services:
       - media_value:/media/ 
     depends_on:
       - web
+
+volumes:
+  static_value:
+  media_value: 
+  database: 
