--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,11 @@
-version: '3.3'
+version: '3.8'
+
+
+volumes:
+  static_value:
+  media_value:
+  database:
+
 
 services:
 
@@ -6,12 +13,14 @@ services:
     image: postgres:13.0-alpine
     volumes:
       - database:/var/lib/postgresql/data/
-    
     env_file:
-      - .env
+      - ./.env
       
+    
   web:
-    image: lokilal/foodgram:latest
+    build: 
+      context: ../backend/foodgram_api
+      dockerfile: Dockerfile
     restart: always
     depends_on:
       - db
@@ -22,24 +31,23 @@ services:
       - media_value:/app/media/ 
 
   frontend:
-    image: lokilal/foodgram_frontend:latest
+    build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - web
       
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/static/
-      - media_value:/media/ 
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - web
+      - frontend
 
-volumes:
-  static_value:
-  media_value: 
-  database: 
