--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -33,11 +33,11 @@ server {
         proxy_pass http://web:8000/admin/;
     }
 
-    location /static/ {
+    location /staticfiles/ {
         alias /static/;
     }
 
-    location /media/ {
+    location /mediafiles/ {
         alias /media/;
     }
 
