--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 127.0.0.1;
+    server_name 51.250.104.198 lokilal.ddns.net;
     server_tokens off;
      proxy_set_header        Host $host;
      proxy_set_header        X-Real-IP $remote_addr;
