--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -45,8 +45,8 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - static_value:/static/
+      - media_value:/media/
     depends_on:
       - web
       - frontend
